feat : deploy userActivation
