# back-end-acara/src/docs/swagger_output.json
@@ -118,6 +118,37 @@
           }
         ]
       }
+    },
+    "/auth/activation": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ActivationRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/ActivationRequest"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -126,12 +157,64 @@
         "type": "http",
         "scheme": "bearer"
       }
-    }
-  },
-  "schemas": {
-    "LoginRequest": {
-      "identifier": "aldp@gmail.com",
-      "password": " 12345678"
+    },
+    "schemas": {
+      "LoginRequest": {
+        "type": "object",
+        "properties": {
+          "identifier": {
+            "type": "string",
+            "example": "aldp@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": " 12345678"
+          }
+        },
+        "xml": {
+          "name": "LoginRequest"
+        }
+      },
+      "RegisterRequest": {
+        "type": "object",
+        "properties": {
+          "fullname": {
+            "type": "string",
+            "example": "ALdo"
+          },
+          "username": {
+            "type": "string",
+            "example": "Wiranata"
+          },
+          "email": {
+            "type": "string",
+            "example": "aldowiranat16@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "12345678"
+          },
+          "confirmPassword": {
+            "type": "string",
+            "example": "12345678"
+          }
+        },
+        "xml": {
+          "name": "RegisterRequest"
+        }
+      },
+      "ActivationRequest": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "example": "123456"
+          }
+        },
+        "xml": {
+          "name": "ActivationRequest"
+        }
+      }
     }
   }
 }
